@@ -478,6 +478,10 @@ Other Changes
 14. SOLR-518: Changed luke.xsl to use divs w/css for generating histograms
     instead of SVG  (Thomas Peuss via hossman)
 
+15. SOLR-592: Added ShardParams interface and changed several string literals
+    to references to constants in CommonParams.
+    (Lars Kotthoff via Otis Gospodnetic)
+
 Build
  1. SOLR-411.  Changed the names of the Solr JARs to use the defacto standard JAR names based on
     project-name-version.jar.  This yields, for example:
